5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1834_2602.log
== TEST (2019-06-25 17:18:15) 
-- CODE:
from numpy import * 
from numpy.linalg import *

alimentos= array ([[2,1,4], [1,2,0], [2,3,2]])

populaçao = ([[2200, 650, 1800]])
populaçao = populaçao.T

quantidade = dot(inv(alimentos), populaçao.T)

print("estafilococo: ", round(quantidade[0], 1))
print("salmonela: ", round(quantidade[1], 1))
print("coli: ", round(quantidade[2], 1))

# Imprime maior quantidade de bacteria
if quantidade[0] == max(quantidade):
    print("estafilococo")
elif quantidade[0] == max(quantidade):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:18:35) 
-- CODE:
from numpy import * 
from numpy.linalg import *

alimentos= array ([[2,1,4], [1,2,0], [2,3,2]])

populacao = ([[2200, 650, 1800]])
populacao = populaçao.T

quantidade = dot(inv(alimentos), populaçao.T)

print("estafilococo: ", round(quantidade[0], 1))
print("salmonela: ", round(quantidade[1], 1))
print("coli: ", round(quantidade[2], 1))

# Imprime maior quantidade de bacteria
if quantidade[0] == max(quantidade):
    print("estafilococo")
elif quantidade[0] == max(quantidade):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:18:47) 
-- CODE:
from numpy import * 
from numpy.linalg import *

alimentos= array ([[2,1,4], [1,2,0], [2,3,2]])

populacao = ([[2200, 650, 1800]])
populacao = populacao.T

quantidade = dot(inv(alimentos), populacao.T)

print("estafilococo: ", round(quantidade[0], 1))
print("salmonela: ", round(quantidade[1], 1))
print("coli: ", round(quantidade[2], 1))

# Imprime maior quantidade de bacteria
if quantidade[0] == max(quantidade):
    print("estafilococo")
elif quantidade[0] == max(quantidade):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:19:58) 
-- CODE:
from numpy import * 
from numpy.linalg import *

alimentos= array ([[2,1,4], [1,2,0], [2,3,2]])

populacao = ([[2200, 650, 1800]])
populacao = populacao.T

quantidade = dot(inv(alimentos), populacao.T)

print("estafilococo: ", round(quantidade[0], 1))
print("salmonela: ", round(quantidade[1], 1))
print("coli: ", round(quantidade[2], 1))

# Imprime maior quantidade de
if quantidade[0] == max(quantidade):
    print("estafilococo")
elif quantidade[0] == max(quantidade):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:20:38) 
-- CODE:
from numpy import * 
from numpy.linalg import *

alimentos= array ([[2,1,4], [1,2,0], [2,3,2]])

populacao = array([[2200, 650, 1800]])
populacao = populacao.T

quantidade = dot(inv(alimentos), populacao.T)

print("estafilococo: ", round(quantidade[0], 1))
print("salmonela: ", round(quantidade[1], 1))
print("coli: ", round(quantidade[2], 1))

# Imprime maior quantidade de
if quantidade[0] == max(quantidade):
    print("estafilococo")
elif quantidade[0] == max(quantidade):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:35:42) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,2], 
						[1,2,3], 
						[4,0,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(consumo, quantidade.T)

print("estafilococo: ", round(quantidade[0], 1))
print("salmonela: ", round(quantidade[1], 1))
print("coli: ", round(quantidade[2], 1))

# Imprime maior quantidade de
if quantidade[0] == max(quantidade):
    print("estafilococo")
elif quantidade[0] == max(quantidade):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:46:34) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,2], 
						[1,2,3], 
						[4,0,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(consumo, quantidade.T)

print(populacao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:46:59) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,2], 
						[1,2,3], 
						[4,0,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(consumo, quantidade)

print(populacao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:47:35) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,2], 
						[1,2,3], 
						[4,0,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(consumo.T, quantidade.T)

print(populacao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:22:40) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,2], 
						[1,2,3], 
						[4,0,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(consumo.T, quantidade.T)

print(populacao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:23:02) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,2], 
						[1,2,3], 
						[4,0,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(consumo, quantidade.T)

print(populacao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:23:10) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,2], 
						[1,2,3], 
						[4,0,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(consumo, quantidade)

print(populacao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:23:18) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,2], 
						[1,2,3], 
						[4,0,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(consumo.T, quantidade)

print(populacao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:26:21) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(consumo.T, quantidade)

print(populacao)
print(min(populacao))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:27:10) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade)

print(populacao)
print(min(populacao))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:27:14) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade)

print(populacao)
print(min(populacao))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:27:35) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(populacao)
print(min(populacao))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:28:09) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(round(populacao, 1)
print(min(populacao))

-- ERROR:
File "XXXX", line 14
    print(min(populacao))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:28:25) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(round(populacao, 1)


-- ERROR:
File "XXXX", line 15
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:28:50) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = round(dot(inv(consumo), quantidade.T), 1)

print(populacao)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:29:00) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = (round(dot(inv(consumo), quantidade.T), 1))

print(populacao)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:37:03) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = (dot(inv(consumo), quantidade.T)

print(populacao)
	

-- ERROR:
File "XXXX", line 13
    print(populacao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:37:39) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(populacao)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:38:01) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(round(consumo), quantidade.T), 1)

print(populacao)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:38:14) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(round(inv(consumo), quantidade.T), 1)

print(populacao)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:38:56) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(populacao)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:39:11) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(round(populacao, 1)
	

-- ERROR:
File "XXXX", line 15
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:39:23) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(round(populacao, 1))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:39:23) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(round(populacao, 1))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:39:37) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(populacao)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:42:17) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(populacao)

if (popuçacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:42:26) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print(populacao)

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:43:57) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coqui: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:44:38) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array ([[2,1,4], 
						[1,2,0], 
						[2,3,2]])

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coqui: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:45:47) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array(eval(input("matriz:")

quantidade = array([[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
File "XXXX", line 6
    quantidade = array([[2200, 650, 1800]])
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:46:37) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array(eval(input("matriz:")# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:") #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
File "XXXX", line 6
    quantidade = array(eval(input() #[[2200, 650, 1800]])
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:46:59) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:49:17) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]]


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", (populacao[0])
print("salmonela: ", (populacao[1])
print("coli: ", (populacao[2])

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
File "XXXX", line 12
    print("salmonela: ", (populacao[1])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:49:33) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]]


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", (populacao[0]))
print("salmonela: ", (populacao[1]))
print("coli: ", (populacao[2]))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:50:27) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]]


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", (populacao[0]))
print("salmonela: ", (populacao[1]))
print("coli: ", (populacao[2]))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- EXECUTION TIME:
1.06627
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 6, in <module>
    quantidade = array(eval(input())) #[[2200, 650, 1800]]
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:50:31) 
-- CODE:
from numpy import * 
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]]


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", (populacao[0]))
print("salmonela: ", (populacao[1]))
print("coli: ", (populacao[2]))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:51:42) 
-- CODE:
 
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:52:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:52:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- EXECUTION TIME:
0.953743
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 6, in <module>
    quantidade = array(eval(input())) #[[2200, 650, 1800]])
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:53:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estalaficoco: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:53:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:54:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- EXECUTION TIME:
1.04323
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 6, in <module>
    quantidade = array(eval(input())) #[[2200, 650, 1800]])
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:55:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
else:
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:58:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("coli")
else:
	print("salmonela")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:59:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))
print(min(popuacao))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:59:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))
print(min(populacao))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:01:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao))
	print("coli")
	

-- ERROR:
File "XXXX", line 19
    elif(populacao[2] == min(populacao))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:01:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:02:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- EXECUTION TIME:
1.05773
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 6, in <module>
    quantidade = array(eval(input())) #[[2200, 650, 1800]])
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:52:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 13:53:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- EXECUTION TIME:
0.88755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 6, in <module>
    quantidade = array(eval(input())) #[[2200, 650, 1800]])
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:55:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 13:57:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array(eval(input("quantidade:"))) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- EXECUTION TIME:
1.0553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 6, in <module>
    quantidade = array(eval(input())) #[[2200, 650, 1800]])
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:57:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array("quantidade:") #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:59:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([2,1,4], [1,2,0], [2,3,2]) #[[2200, 650, 1800]])


populacao = dot(inv(consumo), quantidade.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:00:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([2,1,4], [1,2,0], [2,3,2]) #[[2200, 650, 1800]])


populacao = dot(inv(quantidade),consumo)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:00:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(inv(quantidade),consumo)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:00:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(inv(quantidade),consumo)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- EXECUTION TIME:
1.04791
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estalaficoco
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:02:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(inv(quantidade),consumo.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:02:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(inv(quantidade),consumo.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- EXECUTION TIME:
1.05813
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estalaficoco
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:03:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(quantidade),consumo

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:04:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(inv(consumo),quantidade)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:04:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(inv(quantidade),consumo.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:05:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(inv(quantidade),consumo.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estalaficoco")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- EXECUTION TIME:
1.14251
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estalaficoco
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:08:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(inv(quantidade),consumo.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estafilococo")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:08:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

consumo= array(eval(input("matriz:")))# ([[2,1,4], [1,2,0], [2,3,2]])

quantidade = array([[2,1,4], [1,2,0], [2,3,2]]) #[[2200, 650, 1800]])


populacao = dot(inv(quantidade),consumo.T)

print("estafilococo: ", round(populacao[0], 1))
print("salmonela: ", round(populacao[1], 1))
print("coli: ", round(populacao[2], 1))

if (populacao[0] == min(populacao)):
	print("estafilococo")
elif (populacao[1] == min(populacao)):
	print("salmonela")
elif(populacao[2] == min(populacao)):
	print("coli")
	

-- EXECUTION TIME:
1.01369
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
